--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,5 +13,7 @@ phases:
         - echo Build Completed
 artifacts:
   files:
-    - target/*jar
+    - build/libs/*.jar
+    - scripts/*.sh
+    - appspec.yml
   discard-paths: yes
